the banner on the main page has been made and adapted

--- a/dev/pages/index.html
+++ b/dev/pages/index.html
@@ -11,7 +11,7 @@
         </header>
         <main class="page main-page">
             <!-- @include('./include/components/name.html') -->
-            <h2>Main</h2>
+            @include('./include/components/main-banner.html')
         </main>
         <footer class="footer">
             @include('./include/layouts/footer.html')
