--- a/dev/pages/index.html
+++ b/dev/pages/index.html
@@ -12,6 +12,7 @@
         <main class="page main-page">
             <!-- @include('./include/components/name.html') -->
             @include('./include/components/main-banner.html')
+            @include('./include/components/product-card.html')
         </main>
         <footer class="footer">
             @include('./include/layouts/footer.html')
