a product card has been completed, a block with cards has been made, a block with popular cities has been made. All desktop

--- a/dev/pages/index.html
+++ b/dev/pages/index.html
@@ -12,7 +12,10 @@
         <main class="page main-page">
             <!-- @include('./include/components/name.html') -->
             @include('./include/components/main-banner.html')
-            @include('./include/components/product-card.html')
+            <div class="page__content">
+                @include('./include/components/card-section.html')
+                @include('./include/components/popular-cities.html')
+            </div>
         </main>
         <footer class="footer">
             @include('./include/layouts/footer.html')
