fully made desktop and adaptive home page

--- a/dev/pages/index.html
+++ b/dev/pages/index.html
@@ -15,6 +15,9 @@
             <div class="page__content">
                 @include('./include/components/card-section.html')
                 @include('./include/components/popular-cities.html')
+                @include('./include/components/about-numbers.html')
+                @include('./include/components/card-slider.html')
+                @include('./include/components/estate-statistics.html')
             </div>
         </main>
         <footer class="footer">
