a page with search results has been made + a partial page with a detailed product card

--- a/dev/pages/_links.html
+++ b/dev/pages/_links.html
@@ -15,6 +15,12 @@
             <a href="./index.html" class="dev__link link-reset">Главная</a>
         </div>
         <div class="dev__box">
+            <a href="./property.html" class="dev__link link-reset">Недвижимость</a>
+        </div>
+        <div class="dev__box">
+            <a href="./detailed-product-card.html" class="dev__link link-reset">Детальная карточка товара</a>
+        </div>
+        <div class="dev__box">
             <a href="./_components.html" class="dev__link link-reset">Компоненты</a>
         </div>
         <div class="dev__box">
