--- a/dev/pages/_links.html
+++ b/dev/pages/_links.html
@@ -12,16 +12,34 @@
         </div>
 
         <div class="dev__box">
-            <a href="./index.html" class="dev__link link-reset">Главная</a>
+            <a href="./index.html" class="dev__link link-reset">Главная (Home)</a>
         </div>
         <div class="dev__box">
-            <a href="./property.html" class="dev__link link-reset">Недвижимость</a>
+            <a href="./property.html" class="dev__link link-reset">Недвижимость (Property)</a>
         </div>
         <div class="dev__box">
-            <a href="./detailed-card.html" class="dev__link link-reset">Детальная карточка объекта</a>
+            <a href="./property-map.html" class="dev__link link-reset">Недвижимость на карте (Real estate on the map)</a>
         </div>
         <div class="dev__box">
-            <a href="#" class="dev__link link-reset" data-modal-link="#more-filters">Модальное окно "Фильтр"</a>
+            <a href="./detailed-card.html" class="dev__link link-reset">Детальная карточка объекта (Detailed map of the object)</a>
+        </div>
+        <div class="dev__box">
+            <a href="./search-result.html" class="dev__link link-reset">По запросу есть результаты (Search result)</a>
+        </div>
+        <div class="dev__box">
+            <a href="./search-no-result.html" class="dev__link link-reset">По запросу ничего не найдено (Search no result)</a>
+        </div>
+        <div class="dev__box">
+            <a href="./404.html" class="dev__link link-reset">Страница не найдена (404)</a>
+        </div>
+        <div class="dev__box">
+            <a href="./privacy-policy.html" class="dev__link link-reset">Политика конфиденциальности (Privacy policy)</a>
+        </div>
+        <div class="dev__box">
+            <a href="./terms-of-use.html" class="dev__link link-reset">Условия использования (Terms of use)</a>
+        </div>
+        <div class="dev__box">
+            <a href="#" class="dev__link link-reset" data-modal-link="#more-filters">Модальное окно "Фильтр" (Filter)</a>
         </div>
         <!-- <div class="dev__box">
             <a href="./_components.html" class="dev__link link-reset">Компоненты</a>
