input + textarea + modal windows with forms are made

--- a/dev/pages/detailed-card.html
+++ b/dev/pages/detailed-card.html
@@ -105,7 +105,11 @@
                             @include('./include/components/other-features.html')
                             @include('./include/components/infrastructure.html')
                         </div>
-                        @include('./include/components/side-panel.html')
+                        <div class="side-panel">
+                            <div class="side-panel__content">
+                                @include('./include/components/commercial-block.html')
+                            </div>
+                        </div>
                     </div>
                 </div>
 
