--- a/dev/pages/_links.html
+++ b/dev/pages/_links.html
@@ -41,6 +41,12 @@
         <div class="dev__box">
             <a href="#" class="dev__link link-reset" data-modal-link="#more-filters">Модальное окно "Фильтр" (Filter)</a>
         </div>
+        <div class="dev__box">
+            <a href="#" class="dev__link link-reset" data-modal-link="#buying-house">Модальное окно "Заинтересованы в покупке дома?" (Interested in Buying a Home?)</a>
+        </div>
+        <div class="dev__box">
+            <a href="#" class="dev__link link-reset" data-modal-link="#simple-info">Модальное окно "Менеджер свяжется с вами в ближайшее время" (The manager will contact you shortly)</a>
+        </div>
         <!-- <div class="dev__box">
             <a href="./_components.html" class="dev__link link-reset">Компоненты</a>
         </div>
@@ -65,6 +71,8 @@
 
     </main>
     @include('./include/modal-windows/more-filters.html')
+    @include('./include/modal-windows/simple-info.html')
+    @include('./include/modal-windows/m-form.html')
     @include('./include/layouts/scripts.html')
 </body>
 </html>
