the desktop of the comparison panel is made

--- a/dev/pages/_links.html
+++ b/dev/pages/_links.html
@@ -42,7 +42,10 @@
             <a href="#" class="dev__link link-reset" data-modal-link="#more-filters">Модальное окно "Фильтр" (Filter)</a>
         </div>
         <div class="dev__box">
-            <a href="#" class="dev__link link-reset" data-modal-link="#buying-house">Модальное окно "Заинтересованы в покупке дома?" (Interested in Buying a Home?)</a>
+            <a href="#" class="dev__link link-reset" data-modal-link="#m-interested-in-buying-a-home">Модальное окно "Заинтересованы в покупке дома?" (Interested in Buying a Home?)</a>
+        </div>
+        <div class="dev__box">
+            <a href="#" class="dev__link link-reset" data-modal-link="#m-request-Info">Модальное окно "Запросить информацию" (Request Info)</a>
         </div>
         <div class="dev__box">
             <a href="#" class="dev__link link-reset" data-modal-link="#simple-info">Модальное окно "Менеджер свяжется с вами в ближайшее время" (The manager will contact you shortly)</a>
@@ -72,7 +75,8 @@
     </main>
     @include('./include/modal-windows/more-filters.html')
     @include('./include/modal-windows/simple-info.html')
-    @include('./include/modal-windows/m-form.html')
+    @include('./include/modal-windows/m-interested-in-buying-a-home.html')
+    @include('./include/modal-windows/m-request-Info.html')
     @include('./include/layouts/scripts.html')
 </body>
 </html>
