--- a/dev/pages/index.html
+++ b/dev/pages/index.html
@@ -23,6 +23,7 @@
         <footer class="footer">
             @include('./include/layouts/footer.html')
         </footer>
+        @include('./include/components/compare-bar.html')
         @include('./include/layouts/scripts.html')
     </body>
 </html>
