--- a/dev/pages/privacy-policy.html
+++ b/dev/pages/privacy-policy.html
@@ -11,6 +11,8 @@
         </header>
         <main class="page privacy-policy-page">
             <!-- @include('./include/components/name.html') -->
+            @include('./include/components/bread-crumbs.html')
+
             <div class="page__content">
                 @include('./include/components/text-document.html', {
                     "title": "Privacy policy"
