--- a/dev/pages/search-no-result.html
+++ b/dev/pages/search-no-result.html
@@ -11,6 +11,8 @@
         </header>
         <main class="page search-no-result-page">
             <!-- @include('./include/components/name.html') -->
+            @include('./include/components/bread-crumbs.html')
+
             <div class="page__content">
                 
                 <section class="card-section card-section--property">
