the desktop bar with sorting has been completed + the desktop pages developers have been made

--- a/dev/pages/_links.html
+++ b/dev/pages/_links.html
@@ -24,6 +24,9 @@
             <a href="./detailed-card.html" class="dev__link link-reset">Детальная карточка объекта (Detailed map of the object)</a>
         </div>
         <div class="dev__box">
+            <a href="./developers.html" class="dev__link link-reset">Застройщики (Developers)</a>
+        </div>
+        <div class="dev__box">
             <a href="./search-result.html" class="dev__link link-reset">По запросу есть результаты (Search result)</a>
         </div>
         <div class="dev__box">
